<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_10dp"
        tools:context=".taxcalculator.TaxCalculatorFragment"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_contry_text"
            android:textSize="@dimen/title_text_size" />

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/select_date"
            android:textSize="@dimen/title_text_size" />

        <Spinner
            android:id="@+id/date_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/ammount_excluding_taxes"
            android:textSize="@dimen/title_text_size" />

        <EditText
            android:id="@+id/ammount_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:focusableInTouchMode="true">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/type_of_tax_rate"
            android:textSize="@dimen/title_text_size" />

        <RadioGroup
            android:id="@+id/tax_type_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/price_includiong_tax"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:text="N/A"
                android:textSize="@dimen/title_text_size" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>